update images to local

--- a/index.Rmd
+++ b/index.Rmd
@@ -35,7 +35,7 @@ d-appendix {
 
 How can we effectively cut down on communication costs?
 
-![](https://files.mdnice.com/user/2805/3afd310f-be4a-489f-8860-c13494dfc996.jpg)
+![](./index_image/3afd310f-be4a-489f-8860-c13494dfc996.jpg)
 
 
 <br>
