--- a/_posts/2021-02-03-current-state-of-experimental-design-r-packages/current-state-of-experimental-design-r-packages.Rmd
+++ b/_posts/2021-02-03-current-state-of-experimental-design-r-packages/current-state-of-experimental-design-r-packages.Rmd
@@ -64,7 +64,7 @@ button {
   
 </aside>
 
-```{r setup, cache = FALSE}
+```{r setup, echo=FALSE, cache = FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(rvest)
